# linguAML

./: .buildinfo  .conf.template  .gitignore  README.md  config.toml.template  environment.yml  genindex.html  intro.html  objects.inv  pyproject.toml  search.html  searchindex.js  setup.py
_sources/: intro.md
_sources/introduction/: family.ipynb  hpo-rl.ipynb  index.md
_sources/preliminaries/: _ppo.ipynb  config.ipynb  guidance.ipynb  index.md  logging.ipynb  lstm.ipynb  ppo.ipynb
_sources/rl-framework/: hp-config-buffer.ipynb  index.md
data/air-quality/: README.html
introduction/: family.html  hpo-rl.html  index.html
linguaml/: __init__.py  _logger.py  action.py  agent.py  cli.py  config.py  env.py  hp.py  logger.py  random.py  train.py  utils.py
linguaml/_agents/: base.py
linguaml/action/: __init__.py  _action.py  action.py  action_2_hp_config.py  hp_config_2_action.py  random.py  utils.py
linguaml/agents/: policy_learner.py
linguaml/cli/: app.py  command.py  config.py  dataset.py  main.py  train.py
linguaml/collections/: __init__.py
linguaml/data/: __init__.py  performance_result_buffer.py  replay_buffer.py  transition.py  utils.py
linguaml/families/: __init__.py  _family.py  base.py  family.py  lgbm_classifier.py  logistic.py  svc.py  utils.py
linguaml/family/: base.py  family.py  svc.py
linguaml/hp/: __init__.py  cat.py  config.py
linguaml/llm/: __init__.py  agent.py  utils.py
linguaml/loggers/: __init__.py  common.py  hybrid_logger.py  llm_logger.py  rl_logger.py
linguaml/rl/: __init__.py  advantage.py  agent.py  env.py  loss.py
linguaml/tuners/: __init__.py  hybrid_tuner.py  llm_tuner.py  rl_tuner.py
preliminaries/: _ppo.html  config.html  guidance.html  index.html  logging.html  lstm.html  ppo.html
rl-framework/: hp-config-buffer.html  index.html  tuning-result-buffer.html
tests/: logger.py
(+77 files in other folders)
