[tool.poetry]
name = "linguaml"
version = "0.1.0"
description = "A project that combines the power of Large Language Models (LLMs) with traditional automated machine learning (AML) techniques."
authors = ["isaac-fei <isaac.omega.fei@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/Isaac-Fate/LinguAML"
repository = "https://github.com/Isaac-Fate/LinguAML"

[tool.poetry.scripts]
linguaml = 'linguaml:main'

[tool.poetry.dependencies]
python = ">=3.11,<3.13"

[tool.poetry.group.dev.dependencies]
numpy = "^1.26.1"
pandas = "^2.1.1"
scikit-learn = "^1.3.1"
torch = "^2.1.0"
typer = "^0.9.0"
openai = "^0.28.1"
pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"
rich = "^13.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
