[tool.poetry]
name = "linguaml"
version = "0.1.0"
description = "An automated machine learning (AML) framework that combines the power of Reinforcement Learning (RL) architecture and Large Language Models (LLMs)."
authors = ["isaac-fei <isaac.omega.fei@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/Isaac-Fate/LinguAML"
repository = "https://github.com/Isaac-Fate/LinguAML"

[tool.poetry.scripts]
linguaml = 'linguaml:main'

[tool.poetry.dependencies]
# Python version
python = ">=3.11,<3.13"

# Other packages
numpy = "^1.26.1"
pandas = "^2.1.1"
scikit-learn = "^1.3.1"
torch = "^2.1.0"
typer = "^0.9.0"
openai = "^0.28.1"
pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"
rich = "^13.6.0"
xpyutils = "^0.0.4"
ucimlrepo = "^0.0.3"
inflection = "^0.5.1"
langchain = "^0.0.321"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"
guidance = "^0.0.64"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
